# pkms

./: .dockerignore  .env  .gitignore  .mise.toml  TODO.md  build.sh  create_project_structure.sh  docker-compose.yaml  docker-compose.yml  initialize-keycloak.sh  start_services.sh  test-content-submission.sh  up.sh
docs/: PRD.md  SystemDesign.md  keycloak.md  tab_1.md  workflow.md
infrastructure/api-gateway/: Dockerfile  kong.yml
infrastructure/databases/postgres/migrations/: V1__init.sql
infrastructure/reverse-proxy/: nginx.conf
services/api-gateway/: Dockerfile  entrypoint.sh  kong.yml
services/auth-service/: Dockerfile
services/common-lib/: pyproject.toml
services/common-lib/common_lib/: models.py  sample.py
services/common-lib/tests/: __init__.py
services/common-lib/tests/unit/: test_models.py
services/content-processing-service/: Dockerfile  pyproject.toml
services/content-processing-service/content_processing_service/: config.py  main.py  models.py  processors.py  rabbitmq_consumer.py  routes.py
services/content-submission-service/: Dockerfile  pyproject.toml  requirements.txt
services/content-submission-service/content_submission_service/: __init__.py  classifier.py  config.py  main.py  models.py  routes.py  utils.py
services/content-submission-service/src/: classifier.py  config.py  main.py  models.py  routes.py  utils.py
services/content-submission-service/src/content_submission_service/: __init__.py  classifier.py  config.py  main.py  utils.py
services/content-submission-service/tests/integration/: test_classifier.py
services/content-submission-service/tests/unit/: test_models.py  test_routes.py
services/crawl-service/: pyproject.toml
services/crawl-service/playground/: demo.py  hackernews.md  output.md
services/crawler-service/: Dockerfile  README.md  pyproject.toml
services/crawler-service/crawler_service/: __init__.py  cleaner.py  config.py  crawler.py  main.py  models.py  processors.py  rabbitmq_consumer.py  routes.py
services/crawler-service/playground/: demo.py
services/db-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
services/db-service.old/: pyproject.toml
services/db-service.old/db_service/: initialize_db.py  main.py
services/db-service.old/tests/integration/: test_db.py
services/db-service/config/: development.yaml  production.yaml  test.yaml
services/db-service/db_service/: config.py  content_repository.py  db.py  initialize_db.py  main.py  model.py  populate_db.py
services/db-service/examples/: playground.rs
services/db-service/migration/src/: lib.rs  m20241024_002010_contents.rs
services/db-service/src/: app.rs
services/db-service/src/controllers/: contents.rs  mod.rs
services/db-service/src/fixtures/: contents.yml
services/db-service/src/models/: contents.rs  mod.rs
services/db-service/src/models/_entities/: contents.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
services/db-service/tests/: test_db_service.py
services/db-service/tests/integration/: test_db.py
services/db-service/tests/models/: contents.rs  mod.rs  users.rs
services/db-service/tests/models/snapshots/: can_find_by_pid@users.snap
services/db-service/tests/requests/: auth.rs  contents.rs  mod.rs  prepare_data.rs  user.rs
services/db-service/tests/requests/snapshots/: can_add_content@contents_request.snap  can_delete_content@contents_request.snap  can_get_content@contents_request.snap  can_list@contents_request.snap  can_update_content@contents_request.snap  check_url_exists@contents_request.snap  check_url_not_exists@contents_request.snap  get_contents_with_size_and_page@contents_request.snap
services/db-service/tests/tasks/: seed.rs
services/embedding-service/: Dockerfile  pyproject.toml
services/embedding-service/embedding_service/: config.py  main.py  models.py  processors.py  rabbitmq_consumer.py
services/embedding-service/playground/: content.md  demo.py
services/reverse-proxy/: nginx.conf
services/summarizer-service/: Dockerfile  pyproject.toml
services/summarizer-service/summarizer_service/: config.py  exceptions.py  main.py  models.py  processors.py  rabbitmq_consumer.py  summarizer.py
services/universal_worker/: Dockerfile  pyproject.toml
services/universal_worker/playground/: crawler_demo.py  yt_transcribe.py
services/universal_worker/universal_worker/: config.py  exceptions.py  main.py  models.py  rabbitmq_consumer.py  workflow_config.py
services/universal_worker/universal_worker/processors/: __init__.py  processor.py  processor_factory.py
services/universal_worker/universal_worker/processors/classifier_processor/: __init__.py  classifier.py  classifier_processor.py
services/universal_worker/universal_worker/processors/crawler_processor/: __init__.py  cleaner.py  crawler.py  crawler_processor.py
services/universal_worker/universal_worker/processors/embedding_processor/: __init__.py  embedder.py  embedding_processor.py
services/universal_worker/universal_worker/processors/notifier_processor/: __init__.py  notifier.py  notifier_processor.py
services/universal_worker/universal_worker/processors/summarizer_processor/: __init__.py  summarizer.py  summarizer_processor.py
services/universal_worker/universal_worker/processors/transcriber_processor/: __init__.py  transcriber.py  transcriber_processor.py
services/universal_worker/universal_worker/utils/: db.py  notifier.py  url.py
services/web-application/: .env.production.sample  .gitignore  Dockerfile  package-lock.json  package.json
services/web-application/app/: layout.tsx  page.tsx
services/web-application/components/: navigation.tsx
services/web-application/components/content/: content-card.tsx  content-filter.tsx  content-list.tsx
services/web-application/lib/utils/: content.ts
services/web-application/types/: content.ts
