[tool.poetry]
name = "common-lib"
version = "0.1.0"
description = ""
authors = ["Nguyen Tran <merlinvn@gmail.com>"]
readme = "README.md"
packages = [{ include = "common_lib", from = "./src" }]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
