[tool.poetry]
name = "content-processing-service"
version = "0.1.0"
description = ""
authors = ["Nguyen Tran <merlinvn@gmail.com>"]
readme = "README.md"
packages = [{ include = "content_processing_service", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
common_lib = { path = "../common-lib", develop = true }
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
openai = "^1.51.2"
pydantic = "^2.9.2"
aio-pika = "^9.4.3"
pydantic-settings = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "content_processing_service.main:start"
