[tool.poetry]
name = "db-service"
version = "0.1.0"
description = "Database service for content management"
authors = ["Nguyen Tran <merlinvn@gmail.com>"]
readme = "README.md"
packages = [{ include = "db_service" }]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
openai = "^1.51.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"
httpx = "^0.24.0"
pytest-asyncio = "^0.18.3"

[tool.poetry.scripts]
initialize-db = "db_service.initialize_db:main"
start = "db_service.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: marks tests as integration tests"]
log_cli = true
