[tool.poetry]
name = "embedding_service"
version = "0.1.0"
description = ""
authors = ["Nguyen Tran <merlinvn@gmail.com>"]
readme = "README.md"
packages = [{ include = "embedding_service", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
openai = "^1.51.2"
pydantic = "^2.9.2"
aio-pika = "^9.4.3"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langchain-postgres = "^0.0.12"
psycopg = { extras = ["binary"], version = "^3.2.3" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "embedding_service.main:start"
